// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Lezer tokenizer > basics > tokenizes all basics fixtures > basics/dereference.groq 1`] = `
[
  {
    "end": 1,
    "start": 0,
    "text": "*",
    "token": "wildcard",
  },
  {
    "end": 2,
    "start": 1,
    "text": "[",
    "token": "punctuation.bracket",
  },
  {
    "end": 7,
    "start": 2,
    "text": "_type",
    "token": "identifier",
  },
  {
    "end": 10,
    "start": 8,
    "text": "==",
    "token": "operator",
  },
  {
    "end": 17,
    "start": 11,
    "text": ""post"",
    "token": "string",
  },
  {
    "end": 18,
    "start": 17,
    "text": "]",
    "token": "punctuation.bracket",
  },
  {
    "end": 19,
    "start": 18,
    "text": "{",
    "token": "punctuation.bracket",
  },
  {
    "end": 27,
    "start": 19,
    "text": ""author"",
    "token": "string",
  },
  {
    "end": 28,
    "start": 27,
    "text": ":",
    "token": "punctuation.delimiter",
  },
  {
    "end": 35,
    "start": 29,
    "text": "author",
    "token": "identifier",
  },
  {
    "end": 37,
    "start": 35,
    "text": "->",
    "token": "accessor",
  },
  {
    "end": 41,
    "start": 37,
    "text": "name",
    "token": "identifier",
  },
  {
    "end": 42,
    "start": 41,
    "text": "}",
    "token": "punctuation.bracket",
  },
  {
    "end": 49,
    "start": 43,
    "text": "author",
    "token": "identifier",
  },
  {
    "end": 51,
    "start": 49,
    "text": "->",
    "token": "accessor",
  },
  {
    "end": 58,
    "start": 52,
    "text": "author",
    "token": "identifier",
  },
  {
    "end": 60,
    "start": 58,
    "text": "->",
    "token": "accessor",
  },
  {
    "end": 64,
    "start": 60,
    "text": "name",
    "token": "identifier",
  },
  {
    "end": 66,
    "start": 64,
    "text": "->",
    "token": "accessor",
  },
  {
    "end": 71,
    "start": 66,
    "text": "title",
    "token": "identifier",
  },
]
`;

exports[`Lezer tokenizer > basics > tokenizes all basics fixtures > basics/filter.groq 1`] = `
[
  {
    "end": 1,
    "start": 0,
    "text": "*",
    "token": "wildcard",
  },
  {
    "end": 2,
    "start": 1,
    "text": "[",
    "token": "punctuation.bracket",
  },
  {
    "end": 7,
    "start": 2,
    "text": "_type",
    "token": "identifier",
  },
  {
    "end": 10,
    "start": 8,
    "text": "==",
    "token": "operator",
  },
  {
    "end": 17,
    "start": 11,
    "text": ""post"",
    "token": "string",
  },
  {
    "end": 18,
    "start": 17,
    "text": "]",
    "token": "punctuation.bracket",
  },
]
`;

exports[`Lezer tokenizer > basics > tokenizes all basics fixtures > basics/literals.groq 1`] = `
[
  {
    "end": 4,
    "start": 0,
    "text": "true",
    "token": "keyword",
  },
  {
    "end": 10,
    "start": 5,
    "text": "false",
    "token": "keyword",
  },
  {
    "end": 15,
    "start": 11,
    "text": "null",
    "token": "keyword",
  },
  {
    "end": 18,
    "start": 16,
    "text": "42",
    "token": "number",
  },
  {
    "end": 23,
    "start": 19,
    "text": "3.14",
    "token": "number",
  },
  {
    "end": 28,
    "start": 24,
    "text": "1e10",
    "token": "number",
  },
  {
    "end": 35,
    "start": 29,
    "text": "2.5E-3",
    "token": "number",
  },
  {
    "end": 49,
    "start": 36,
    "text": ""hello world"",
    "token": "string",
  },
  {
    "end": 65,
    "start": 50,
    "text": "'single quoted'",
    "token": "string",
  },
  {
    "end": 73,
    "start": 67,
    "text": "escape",
    "token": "identifier",
  },
  {
    "end": 74,
    "start": 73,
    "text": ":",
    "token": "punctuation.delimiter",
  },
  {
    "end": 77,
    "start": 76,
    "text": "n",
    "token": "identifier",
  },
  {
    "end": 80,
    "start": 79,
    "text": "t",
    "token": "identifier",
  },
  {
    "end": 90,
    "start": 85,
    "text": "u0041",
    "token": "identifier",
  },
  {
    "end": 93,
    "start": 92,
    "text": "u",
    "token": "identifier",
  },
  {
    "end": 94,
    "start": 93,
    "text": "{",
    "token": "punctuation.bracket",
  },
  {
    "end": 95,
    "start": 94,
    "text": "1",
    "token": "number",
  },
  {
    "end": 99,
    "start": 95,
    "text": "F600",
    "token": "identifier",
  },
  {
    "end": 100,
    "start": 99,
    "text": "}",
    "token": "punctuation.bracket",
  },
  {
    "end": 122,
    "start": 102,
    "text": "// this is a comment",
    "token": "comment",
  },
]
`;

exports[`Lezer tokenizer > basics > tokenizes all basics fixtures > basics/ordering.groq 1`] = `
[
  {
    "end": 1,
    "start": 0,
    "text": "*",
    "token": "wildcard",
  },
  {
    "end": 2,
    "start": 1,
    "text": "[",
    "token": "punctuation.bracket",
  },
  {
    "end": 7,
    "start": 2,
    "text": "_type",
    "token": "identifier",
  },
  {
    "end": 10,
    "start": 8,
    "text": "==",
    "token": "operator",
  },
  {
    "end": 17,
    "start": 11,
    "text": ""post"",
    "token": "string",
  },
  {
    "end": 18,
    "start": 17,
    "text": "]",
    "token": "punctuation.bracket",
  },
  {
    "end": 20,
    "start": 19,
    "text": "|",
    "token": "operator.pipe",
  },
  {
    "end": 26,
    "start": 21,
    "text": "order",
    "token": "identifier.function",
  },
  {
    "end": 27,
    "start": 26,
    "text": "(",
    "token": "punctuation.bracket",
  },
  {
    "end": 38,
    "start": 27,
    "text": "publishedAt",
    "token": "identifier",
  },
  {
    "end": 43,
    "start": 39,
    "text": "desc",
    "token": "operator.keyword",
  },
  {
    "end": 44,
    "start": 43,
    "text": ")",
    "token": "punctuation.bracket",
  },
  {
    "end": 46,
    "start": 45,
    "text": "*",
    "token": "wildcard",
  },
  {
    "end": 47,
    "start": 46,
    "text": "[",
    "token": "punctuation.bracket",
  },
  {
    "end": 52,
    "start": 47,
    "text": "_type",
    "token": "identifier",
  },
  {
    "end": 55,
    "start": 53,
    "text": "==",
    "token": "operator",
  },
  {
    "end": 62,
    "start": 56,
    "text": ""post"",
    "token": "string",
  },
  {
    "end": 63,
    "start": 62,
    "text": "]",
    "token": "punctuation.bracket",
  },
  {
    "end": 65,
    "start": 64,
    "text": "|",
    "token": "operator.pipe",
  },
  {
    "end": 71,
    "start": 66,
    "text": "order",
    "token": "identifier.function",
  },
  {
    "end": 72,
    "start": 71,
    "text": "(",
    "token": "punctuation.bracket",
  },
  {
    "end": 77,
    "start": 72,
    "text": "_type",
    "token": "identifier",
  },
  {
    "end": 81,
    "start": 78,
    "text": "asc",
    "token": "operator.keyword",
  },
  {
    "end": 82,
    "start": 81,
    "text": ",",
    "token": "punctuation.delimiter",
  },
  {
    "end": 94,
    "start": 83,
    "text": "publishedAt",
    "token": "identifier",
  },
  {
    "end": 99,
    "start": 95,
    "text": "desc",
    "token": "operator.keyword",
  },
  {
    "end": 100,
    "start": 99,
    "text": ")",
    "token": "punctuation.bracket",
  },
]
`;

exports[`Lezer tokenizer > basics > tokenizes all basics fixtures > basics/parent-ref.groq 1`] = `
[
  {
    "end": 1,
    "start": 0,
    "text": "*",
    "token": "wildcard",
  },
  {
    "end": 2,
    "start": 1,
    "text": "[",
    "token": "punctuation.bracket",
  },
  {
    "end": 7,
    "start": 2,
    "text": "_type",
    "token": "identifier",
  },
  {
    "end": 10,
    "start": 8,
    "text": "==",
    "token": "operator",
  },
  {
    "end": 17,
    "start": 11,
    "text": ""post"",
    "token": "string",
  },
  {
    "end": 18,
    "start": 17,
    "text": "]",
    "token": "punctuation.bracket",
  },
  {
    "end": 19,
    "start": 18,
    "text": "{",
    "token": "punctuation.bracket",
  },
  {
    "end": 22,
    "start": 19,
    "text": "...",
    "token": "operator.spread",
  },
  {
    "end": 23,
    "start": 22,
    "text": ",",
    "token": "punctuation.delimiter",
  },
  {
    "end": 33,
    "start": 24,
    "text": ""related"",
    "token": "string",
  },
  {
    "end": 34,
    "start": 33,
    "text": ":",
    "token": "punctuation.delimiter",
  },
  {
    "end": 36,
    "start": 35,
    "text": "*",
    "token": "wildcard",
  },
  {
    "end": 37,
    "start": 36,
    "text": "[",
    "token": "punctuation.bracket",
  },
  {
    "end": 42,
    "start": 37,
    "text": "_type",
    "token": "identifier",
  },
  {
    "end": 45,
    "start": 43,
    "text": "==",
    "token": "operator",
  },
  {
    "end": 52,
    "start": 46,
    "text": ""post"",
    "token": "string",
  },
  {
    "end": 55,
    "start": 53,
    "text": "&&",
    "token": "operator",
  },
  {
    "end": 66,
    "start": 56,
    "text": "references",
    "token": "identifier.function",
  },
  {
    "end": 67,
    "start": 66,
    "text": "(",
    "token": "punctuation.bracket",
  },
  {
    "end": 68,
    "start": 67,
    "text": "^",
    "token": "variable.special",
  },
  {
    "end": 69,
    "start": 68,
    "text": ".",
    "token": "accessor",
  },
  {
    "end": 72,
    "start": 69,
    "text": "_id",
    "token": "identifier",
  },
  {
    "end": 73,
    "start": 72,
    "text": ")",
    "token": "punctuation.bracket",
  },
  {
    "end": 74,
    "start": 73,
    "text": "]",
    "token": "punctuation.bracket",
  },
  {
    "end": 75,
    "start": 74,
    "text": "}",
    "token": "punctuation.bracket",
  },
]
`;

exports[`Lezer tokenizer > basics > tokenizes all basics fixtures > basics/projection.groq 1`] = `
[
  {
    "end": 1,
    "start": 0,
    "text": "*",
    "token": "wildcard",
  },
  {
    "end": 2,
    "start": 1,
    "text": "[",
    "token": "punctuation.bracket",
  },
  {
    "end": 7,
    "start": 2,
    "text": "_type",
    "token": "identifier",
  },
  {
    "end": 10,
    "start": 8,
    "text": "==",
    "token": "operator",
  },
  {
    "end": 17,
    "start": 11,
    "text": ""post"",
    "token": "string",
  },
  {
    "end": 18,
    "start": 17,
    "text": "]",
    "token": "punctuation.bracket",
  },
  {
    "end": 19,
    "start": 18,
    "text": "{",
    "token": "punctuation.bracket",
  },
  {
    "end": 24,
    "start": 19,
    "text": "title",
    "token": "identifier",
  },
  {
    "end": 25,
    "start": 24,
    "text": ",",
    "token": "punctuation.delimiter",
  },
  {
    "end": 30,
    "start": 26,
    "text": "body",
    "token": "identifier",
  },
  {
    "end": 31,
    "start": 30,
    "text": ",",
    "token": "punctuation.delimiter",
  },
  {
    "end": 40,
    "start": 32,
    "text": ""author"",
    "token": "string",
  },
  {
    "end": 41,
    "start": 40,
    "text": ":",
    "token": "punctuation.delimiter",
  },
  {
    "end": 48,
    "start": 42,
    "text": "author",
    "token": "identifier",
  },
  {
    "end": 50,
    "start": 48,
    "text": "->",
    "token": "accessor",
  },
  {
    "end": 54,
    "start": 50,
    "text": "name",
    "token": "identifier",
  },
  {
    "end": 55,
    "start": 54,
    "text": "}",
    "token": "punctuation.bracket",
  },
]
`;

exports[`Lezer tokenizer > basics > tokenizes all basics fixtures > basics/scoring.groq 1`] = `
[
  {
    "end": 1,
    "start": 0,
    "text": "*",
    "token": "wildcard",
  },
  {
    "end": 2,
    "start": 1,
    "text": "[",
    "token": "punctuation.bracket",
  },
  {
    "end": 7,
    "start": 2,
    "text": "_type",
    "token": "identifier",
  },
  {
    "end": 10,
    "start": 8,
    "text": "==",
    "token": "operator",
  },
  {
    "end": 17,
    "start": 11,
    "text": ""post"",
    "token": "string",
  },
  {
    "end": 18,
    "start": 17,
    "text": "]",
    "token": "punctuation.bracket",
  },
  {
    "end": 20,
    "start": 19,
    "text": "|",
    "token": "operator.pipe",
  },
  {
    "end": 26,
    "start": 21,
    "text": "score",
    "token": "identifier.function",
  },
  {
    "end": 27,
    "start": 26,
    "text": "(",
    "token": "punctuation.bracket",
  },
  {
    "end": 32,
    "start": 27,
    "text": "boost",
    "token": "identifier.function",
  },
  {
    "end": 33,
    "start": 32,
    "text": "(",
    "token": "punctuation.bracket",
  },
  {
    "end": 38,
    "start": 33,
    "text": "title",
    "token": "identifier",
  },
  {
    "end": 44,
    "start": 39,
    "text": "match",
    "token": "operator.keyword",
  },
  {
    "end": 47,
    "start": 45,
    "text": "$q",
    "token": "variable",
  },
  {
    "end": 48,
    "start": 47,
    "text": ",",
    "token": "punctuation.delimiter",
  },
  {
    "end": 50,
    "start": 49,
    "text": "3",
    "token": "number",
  },
  {
    "end": 51,
    "start": 50,
    "text": ")",
    "token": "punctuation.bracket",
  },
  {
    "end": 52,
    "start": 51,
    "text": ",",
    "token": "punctuation.delimiter",
  },
  {
    "end": 57,
    "start": 53,
    "text": "body",
    "token": "identifier",
  },
  {
    "end": 63,
    "start": 58,
    "text": "match",
    "token": "operator.keyword",
  },
  {
    "end": 66,
    "start": 64,
    "text": "$q",
    "token": "variable",
  },
  {
    "end": 67,
    "start": 66,
    "text": ")",
    "token": "punctuation.bracket",
  },
]
`;

exports[`Lezer tokenizer > basics > tokenizes all basics fixtures > basics/slice.groq 1`] = `
[
  {
    "end": 1,
    "start": 0,
    "text": "*",
    "token": "wildcard",
  },
  {
    "end": 2,
    "start": 1,
    "text": "[",
    "token": "punctuation.bracket",
  },
  {
    "end": 7,
    "start": 2,
    "text": "_type",
    "token": "identifier",
  },
  {
    "end": 10,
    "start": 8,
    "text": "==",
    "token": "operator",
  },
  {
    "end": 17,
    "start": 11,
    "text": ""post"",
    "token": "string",
  },
  {
    "end": 18,
    "start": 17,
    "text": "]",
    "token": "punctuation.bracket",
  },
  {
    "end": 19,
    "start": 18,
    "text": "[",
    "token": "punctuation.bracket",
  },
  {
    "end": 20,
    "start": 19,
    "text": "0",
    "token": "number",
  },
  {
    "end": 23,
    "start": 20,
    "text": "...",
    "token": "operator.spread",
  },
  {
    "end": 25,
    "start": 23,
    "text": "10",
    "token": "number",
  },
  {
    "end": 26,
    "start": 25,
    "text": "]",
    "token": "punctuation.bracket",
  },
]
`;

exports[`Lezer tokenizer > edge-cases > tokenizes all edge-cases fixtures > edge-cases/empty-array-traversal.groq 1`] = `
[
  {
    "end": 5,
    "start": 0,
    "text": "items",
    "token": "identifier",
  },
  {
    "end": 6,
    "start": 5,
    "text": "[",
    "token": "punctuation.bracket",
  },
  {
    "end": 7,
    "start": 6,
    "text": "]",
    "token": "punctuation.bracket",
  },
  {
    "end": 9,
    "start": 8,
    "text": "*",
    "token": "wildcard",
  },
  {
    "end": 10,
    "start": 9,
    "text": "[",
    "token": "punctuation.bracket",
  },
  {
    "end": 15,
    "start": 10,
    "text": "_type",
    "token": "identifier",
  },
  {
    "end": 18,
    "start": 16,
    "text": "==",
    "token": "operator",
  },
  {
    "end": 25,
    "start": 19,
    "text": ""post"",
    "token": "string",
  },
  {
    "end": 26,
    "start": 25,
    "text": "]",
    "token": "punctuation.bracket",
  },
  {
    "end": 27,
    "start": 26,
    "text": ".",
    "token": "accessor",
  },
  {
    "end": 31,
    "start": 27,
    "text": "tags",
    "token": "identifier",
  },
  {
    "end": 32,
    "start": 31,
    "text": "[",
    "token": "punctuation.bracket",
  },
  {
    "end": 33,
    "start": 32,
    "text": "]",
    "token": "punctuation.bracket",
  },
]
`;

exports[`Lezer tokenizer > edge-cases > tokenizes all edge-cases fixtures > edge-cases/keywords-as-fields.groq 1`] = `
[
  {
    "end": 1,
    "start": 0,
    "text": "*",
    "token": "wildcard",
  },
  {
    "end": 2,
    "start": 1,
    "text": "[",
    "token": "punctuation.bracket",
  },
  {
    "end": 7,
    "start": 2,
    "text": "_type",
    "token": "identifier",
  },
  {
    "end": 10,
    "start": 8,
    "text": "==",
    "token": "operator",
  },
  {
    "end": 17,
    "start": 11,
    "text": ""post"",
    "token": "string",
  },
  {
    "end": 18,
    "start": 17,
    "text": "]",
    "token": "punctuation.bracket",
  },
  {
    "end": 19,
    "start": 18,
    "text": "{",
    "token": "punctuation.bracket",
  },
  {
    "end": 24,
    "start": 19,
    "text": "match",
    "token": "operator.keyword",
  },
  {
    "end": 25,
    "start": 24,
    "text": ",",
    "token": "punctuation.delimiter",
  },
  {
    "end": 28,
    "start": 26,
    "text": "in",
    "token": "operator.keyword",
  },
  {
    "end": 29,
    "start": 28,
    "text": ",",
    "token": "punctuation.delimiter",
  },
  {
    "end": 34,
    "start": 30,
    "text": "desc",
    "token": "operator.keyword",
  },
  {
    "end": 35,
    "start": 34,
    "text": ",",
    "token": "punctuation.delimiter",
  },
  {
    "end": 39,
    "start": 36,
    "text": "asc",
    "token": "operator.keyword",
  },
  {
    "end": 40,
    "start": 39,
    "text": ",",
    "token": "punctuation.delimiter",
  },
  {
    "end": 45,
    "start": 41,
    "text": "true",
    "token": "keyword",
  },
  {
    "end": 46,
    "start": 45,
    "text": ",",
    "token": "punctuation.delimiter",
  },
  {
    "end": 52,
    "start": 47,
    "text": "false",
    "token": "keyword",
  },
  {
    "end": 53,
    "start": 52,
    "text": ",",
    "token": "punctuation.delimiter",
  },
  {
    "end": 58,
    "start": 54,
    "text": "null",
    "token": "keyword",
  },
  {
    "end": 59,
    "start": 58,
    "text": ",",
    "token": "punctuation.delimiter",
  },
  {
    "end": 65,
    "start": 60,
    "text": "order",
    "token": "identifier",
  },
  {
    "end": 66,
    "start": 65,
    "text": ",",
    "token": "punctuation.delimiter",
  },
  {
    "end": 72,
    "start": 67,
    "text": "score",
    "token": "identifier",
  },
  {
    "end": 73,
    "start": 72,
    "text": "}",
    "token": "punctuation.bracket",
  },
]
`;

exports[`Lezer tokenizer > edge-cases > tokenizes all edge-cases fixtures > edge-cases/negative-index.groq 1`] = `
[
  {
    "end": 5,
    "start": 0,
    "text": "items",
    "token": "identifier",
  },
  {
    "end": 6,
    "start": 5,
    "text": "[",
    "token": "punctuation.bracket",
  },
  {
    "end": 7,
    "start": 6,
    "text": "-",
    "token": "operator",
  },
  {
    "end": 8,
    "start": 7,
    "text": "1",
    "token": "number",
  },
  {
    "end": 9,
    "start": 8,
    "text": "]",
    "token": "punctuation.bracket",
  },
  {
    "end": 11,
    "start": 10,
    "text": "*",
    "token": "wildcard",
  },
  {
    "end": 12,
    "start": 11,
    "text": "[",
    "token": "punctuation.bracket",
  },
  {
    "end": 17,
    "start": 12,
    "text": "_type",
    "token": "identifier",
  },
  {
    "end": 20,
    "start": 18,
    "text": "==",
    "token": "operator",
  },
  {
    "end": 27,
    "start": 21,
    "text": ""post"",
    "token": "string",
  },
  {
    "end": 28,
    "start": 27,
    "text": "]",
    "token": "punctuation.bracket",
  },
  {
    "end": 30,
    "start": 29,
    "text": "|",
    "token": "operator.pipe",
  },
  {
    "end": 36,
    "start": 31,
    "text": "order",
    "token": "identifier.function",
  },
  {
    "end": 37,
    "start": 36,
    "text": "(",
    "token": "punctuation.bracket",
  },
  {
    "end": 48,
    "start": 37,
    "text": "publishedAt",
    "token": "identifier",
  },
  {
    "end": 53,
    "start": 49,
    "text": "desc",
    "token": "operator.keyword",
  },
  {
    "end": 54,
    "start": 53,
    "text": ")",
    "token": "punctuation.bracket",
  },
  {
    "end": 56,
    "start": 55,
    "text": "[",
    "token": "punctuation.bracket",
  },
  {
    "end": 57,
    "start": 56,
    "text": "0",
    "token": "number",
  },
  {
    "end": 58,
    "start": 57,
    "text": "]",
    "token": "punctuation.bracket",
  },
]
`;

exports[`Lezer tokenizer > edge-cases > tokenizes all edge-cases fixtures > edge-cases/nested-brackets.groq 1`] = `
[
  {
    "end": 1,
    "start": 0,
    "text": "*",
    "token": "wildcard",
  },
  {
    "end": 2,
    "start": 1,
    "text": "[",
    "token": "punctuation.bracket",
  },
  {
    "end": 7,
    "start": 2,
    "text": "_type",
    "token": "identifier",
  },
  {
    "end": 10,
    "start": 8,
    "text": "==",
    "token": "operator",
  },
  {
    "end": 17,
    "start": 11,
    "text": ""post"",
    "token": "string",
  },
  {
    "end": 20,
    "start": 18,
    "text": "&&",
    "token": "operator",
  },
  {
    "end": 31,
    "start": 21,
    "text": "references",
    "token": "identifier.function",
  },
  {
    "end": 32,
    "start": 31,
    "text": "(",
    "token": "punctuation.bracket",
  },
  {
    "end": 33,
    "start": 32,
    "text": "*",
    "token": "wildcard",
  },
  {
    "end": 34,
    "start": 33,
    "text": "[",
    "token": "punctuation.bracket",
  },
  {
    "end": 39,
    "start": 34,
    "text": "_type",
    "token": "identifier",
  },
  {
    "end": 42,
    "start": 40,
    "text": "==",
    "token": "operator",
  },
  {
    "end": 51,
    "start": 43,
    "text": ""author"",
    "token": "string",
  },
  {
    "end": 52,
    "start": 51,
    "text": "]",
    "token": "punctuation.bracket",
  },
  {
    "end": 53,
    "start": 52,
    "text": ".",
    "token": "accessor",
  },
  {
    "end": 56,
    "start": 53,
    "text": "_id",
    "token": "identifier",
  },
  {
    "end": 57,
    "start": 56,
    "text": ")",
    "token": "punctuation.bracket",
  },
  {
    "end": 58,
    "start": 57,
    "text": "]",
    "token": "punctuation.bracket",
  },
  {
    "end": 60,
    "start": 59,
    "text": "*",
    "token": "wildcard",
  },
  {
    "end": 61,
    "start": 60,
    "text": "[",
    "token": "punctuation.bracket",
  },
  {
    "end": 66,
    "start": 61,
    "text": "_type",
    "token": "identifier",
  },
  {
    "end": 69,
    "start": 67,
    "text": "==",
    "token": "operator",
  },
  {
    "end": 80,
    "start": 70,
    "text": ""category"",
    "token": "string",
  },
  {
    "end": 81,
    "start": 80,
    "text": "]",
    "token": "punctuation.bracket",
  },
  {
    "end": 82,
    "start": 81,
    "text": "{",
    "token": "punctuation.bracket",
  },
  {
    "end": 86,
    "start": 82,
    "text": "name",
    "token": "identifier",
  },
  {
    "end": 87,
    "start": 86,
    "text": ",",
    "token": "punctuation.delimiter",
  },
  {
    "end": 98,
    "start": 88,
    "text": ""products"",
    "token": "string",
  },
  {
    "end": 99,
    "start": 98,
    "text": ":",
    "token": "punctuation.delimiter",
  },
  {
    "end": 101,
    "start": 100,
    "text": "*",
    "token": "wildcard",
  },
  {
    "end": 102,
    "start": 101,
    "text": "[",
    "token": "punctuation.bracket",
  },
  {
    "end": 107,
    "start": 102,
    "text": "_type",
    "token": "identifier",
  },
  {
    "end": 110,
    "start": 108,
    "text": "==",
    "token": "operator",
  },
  {
    "end": 120,
    "start": 111,
    "text": ""product"",
    "token": "string",
  },
  {
    "end": 123,
    "start": 121,
    "text": "&&",
    "token": "operator",
  },
  {
    "end": 134,
    "start": 124,
    "text": "references",
    "token": "identifier.function",
  },
  {
    "end": 135,
    "start": 134,
    "text": "(",
    "token": "punctuation.bracket",
  },
  {
    "end": 136,
    "start": 135,
    "text": "^",
    "token": "variable.special",
  },
  {
    "end": 137,
    "start": 136,
    "text": ".",
    "token": "accessor",
  },
  {
    "end": 140,
    "start": 137,
    "text": "_id",
    "token": "identifier",
  },
  {
    "end": 141,
    "start": 140,
    "text": ")",
    "token": "punctuation.bracket",
  },
  {
    "end": 142,
    "start": 141,
    "text": "]",
    "token": "punctuation.bracket",
  },
  {
    "end": 143,
    "start": 142,
    "text": "}",
    "token": "punctuation.bracket",
  },
]
`;

exports[`Lezer tokenizer > edge-cases > tokenizes all edge-cases fixtures > edge-cases/string-escapes.groq 1`] = `
[
  {
    "end": 14,
    "start": 0,
    "text": ""hello\\nworld"",
    "token": "string",
  },
  {
    "end": 26,
    "start": 15,
    "text": ""tab\\there"",
    "token": "string",
  },
  {
    "end": 42,
    "start": 27,
    "text": ""quote\\"inside"",
    "token": "string",
  },
  {
    "end": 58,
    "start": 43,
    "text": "'single\\'quote'",
    "token": "string",
  },
  {
    "end": 75,
    "start": 59,
    "text": ""unicode \\u0041"",
    "token": "string",
  },
  {
    "end": 82,
    "start": 77,
    "text": "emoji",
    "token": "identifier",
  },
  {
    "end": 85,
    "start": 84,
    "text": "u",
    "token": "identifier",
  },
  {
    "end": 86,
    "start": 85,
    "text": "{",
    "token": "punctuation.bracket",
  },
  {
    "end": 87,
    "start": 86,
    "text": "1",
    "token": "number",
  },
  {
    "end": 91,
    "start": 87,
    "text": "F600",
    "token": "identifier",
  },
  {
    "end": 92,
    "start": 91,
    "text": "}",
    "token": "punctuation.bracket",
  },
  {
    "end": 117,
    "start": 94,
    "text": ""slash \\/ backslash \\\\"",
    "token": "string",
  },
]
`;

exports[`Lezer tokenizer > edge-cases > tokenizes all edge-cases fixtures > edge-cases/variables.groq 1`] = `
[
  {
    "end": 5,
    "start": 0,
    "text": "$type",
    "token": "variable",
  },
  {
    "end": 13,
    "start": 6,
    "text": "$userId",
    "token": "variable",
  },
  {
    "end": 15,
    "start": 14,
    "text": "@",
    "token": "variable.special",
  },
  {
    "end": 17,
    "start": 16,
    "text": "^",
    "token": "variable.special",
  },
  {
    "end": 19,
    "start": 18,
    "text": "^",
    "token": "variable.special",
  },
  {
    "end": 20,
    "start": 19,
    "text": "^",
    "token": "variable.special",
  },
  {
    "end": 22,
    "start": 21,
    "text": "*",
    "token": "wildcard",
  },
]
`;

exports[`Lezer tokenizer > edge-cases > tokenizes all edge-cases fixtures > edge-cases/wildcard-vs-multiply.groq 1`] = `
[
  {
    "end": 1,
    "start": 0,
    "text": "*",
    "token": "wildcard",
  },
  {
    "end": 3,
    "start": 2,
    "text": "*",
    "token": "wildcard",
  },
  {
    "end": 4,
    "start": 3,
    "text": "[",
    "token": "punctuation.bracket",
  },
  {
    "end": 9,
    "start": 4,
    "text": "_type",
    "token": "identifier",
  },
  {
    "end": 12,
    "start": 10,
    "text": "==",
    "token": "operator",
  },
  {
    "end": 19,
    "start": 13,
    "text": ""post"",
    "token": "string",
  },
  {
    "end": 20,
    "start": 19,
    "text": "]",
    "token": "punctuation.bracket",
  },
  {
    "end": 26,
    "start": 21,
    "text": "count",
    "token": "identifier",
  },
  {
    "end": 28,
    "start": 27,
    "text": "*",
    "token": "wildcard",
  },
  {
    "end": 30,
    "start": 29,
    "text": "2",
    "token": "number",
  },
  {
    "end": 32,
    "start": 31,
    "text": "2",
    "token": "number",
  },
  {
    "end": 34,
    "start": 33,
    "text": "*",
    "token": "wildcard",
  },
  {
    "end": 36,
    "start": 35,
    "text": "3",
    "token": "number",
  },
  {
    "end": 38,
    "start": 37,
    "text": "*",
    "token": "wildcard",
  },
  {
    "end": 39,
    "start": 38,
    "text": "[",
    "token": "punctuation.bracket",
  },
  {
    "end": 44,
    "start": 39,
    "text": "count",
    "token": "identifier",
  },
  {
    "end": 46,
    "start": 45,
    "text": "*",
    "token": "wildcard",
  },
  {
    "end": 52,
    "start": 47,
    "text": "price",
    "token": "identifier",
  },
  {
    "end": 54,
    "start": 53,
    "text": ">",
    "token": "operator",
  },
  {
    "end": 58,
    "start": 55,
    "text": "100",
    "token": "number",
  },
  {
    "end": 59,
    "start": 58,
    "text": "]",
    "token": "punctuation.bracket",
  },
]
`;

exports[`Lezer tokenizer > functions > tokenizes all functions fixtures > functions/global.groq 1`] = `
[
  {
    "end": 5,
    "start": 0,
    "text": "count",
    "token": "identifier.function",
  },
  {
    "end": 6,
    "start": 5,
    "text": "(",
    "token": "punctuation.bracket",
  },
  {
    "end": 7,
    "start": 6,
    "text": "*",
    "token": "wildcard",
  },
  {
    "end": 8,
    "start": 7,
    "text": "[",
    "token": "punctuation.bracket",
  },
  {
    "end": 13,
    "start": 8,
    "text": "_type",
    "token": "identifier",
  },
  {
    "end": 16,
    "start": 14,
    "text": "==",
    "token": "operator",
  },
  {
    "end": 23,
    "start": 17,
    "text": ""post"",
    "token": "string",
  },
  {
    "end": 24,
    "start": 23,
    "text": "]",
    "token": "punctuation.bracket",
  },
  {
    "end": 25,
    "start": 24,
    "text": ")",
    "token": "punctuation.bracket",
  },
  {
    "end": 33,
    "start": 26,
    "text": "defined",
    "token": "identifier.function",
  },
  {
    "end": 34,
    "start": 33,
    "text": "(",
    "token": "punctuation.bracket",
  },
  {
    "end": 39,
    "start": 34,
    "text": "title",
    "token": "identifier",
  },
  {
    "end": 40,
    "start": 39,
    "text": ")",
    "token": "punctuation.bracket",
  },
  {
    "end": 49,
    "start": 41,
    "text": "coalesce",
    "token": "identifier",
  },
  {
    "end": 50,
    "start": 49,
    "text": "(",
    "token": "punctuation.bracket",
  },
  {
    "end": 58,
    "start": 50,
    "text": "subtitle",
    "token": "identifier",
  },
  {
    "end": 59,
    "start": 58,
    "text": ",",
    "token": "punctuation.delimiter",
  },
  {
    "end": 70,
    "start": 60,
    "text": ""Untitled"",
    "token": "string",
  },
  {
    "end": 71,
    "start": 70,
    "text": ")",
    "token": "punctuation.bracket",
  },
  {
    "end": 78,
    "start": 72,
    "text": "select",
    "token": "identifier.function",
  },
  {
    "end": 79,
    "start": 78,
    "text": "(",
    "token": "punctuation.bracket",
  },
  {
    "end": 84,
    "start": 79,
    "text": "_type",
    "token": "identifier",
  },
  {
    "end": 87,
    "start": 85,
    "text": "==",
    "token": "operator",
  },
  {
    "end": 94,
    "start": 88,
    "text": ""post"",
    "token": "string",
  },
  {
    "end": 97,
    "start": 95,
    "text": "=>",
    "token": "operator.arrow",
  },
  {
    "end": 103,
    "start": 98,
    "text": "title",
    "token": "identifier",
  },
  {
    "end": 104,
    "start": 103,
    "text": ",",
    "token": "punctuation.delimiter",
  },
  {
    "end": 109,
    "start": 105,
    "text": "name",
    "token": "identifier",
  },
  {
    "end": 110,
    "start": 109,
    "text": ")",
    "token": "punctuation.bracket",
  },
  {
    "end": 116,
    "start": 111,
    "text": "round",
    "token": "identifier.function",
  },
  {
    "end": 117,
    "start": 116,
    "text": "(",
    "token": "punctuation.bracket",
  },
  {
    "end": 122,
    "start": 117,
    "text": "price",
    "token": "identifier",
  },
  {
    "end": 123,
    "start": 122,
    "text": ",",
    "token": "punctuation.delimiter",
  },
  {
    "end": 125,
    "start": 124,
    "text": "2",
    "token": "number",
  },
  {
    "end": 126,
    "start": 125,
    "text": ")",
    "token": "punctuation.bracket",
  },
  {
    "end": 133,
    "start": 127,
    "text": "length",
    "token": "identifier.function",
  },
  {
    "end": 134,
    "start": 133,
    "text": "(",
    "token": "punctuation.bracket",
  },
  {
    "end": 139,
    "start": 134,
    "text": "items",
    "token": "identifier",
  },
  {
    "end": 140,
    "start": 139,
    "text": ")",
    "token": "punctuation.bracket",
  },
  {
    "end": 146,
    "start": 141,
    "text": "lower",
    "token": "identifier",
  },
  {
    "end": 147,
    "start": 146,
    "text": "(",
    "token": "punctuation.bracket",
  },
  {
    "end": 152,
    "start": 147,
    "text": "title",
    "token": "identifier",
  },
  {
    "end": 153,
    "start": 152,
    "text": ")",
    "token": "punctuation.bracket",
  },
  {
    "end": 159,
    "start": 154,
    "text": "upper",
    "token": "identifier.function",
  },
  {
    "end": 160,
    "start": 159,
    "text": "(",
    "token": "punctuation.bracket",
  },
  {
    "end": 164,
    "start": 160,
    "text": "name",
    "token": "identifier",
  },
  {
    "end": 165,
    "start": 164,
    "text": ")",
    "token": "punctuation.bracket",
  },
  {
    "end": 169,
    "start": 166,
    "text": "now",
    "token": "identifier.function",
  },
  {
    "end": 170,
    "start": 169,
    "text": "(",
    "token": "punctuation.bracket",
  },
  {
    "end": 171,
    "start": 170,
    "text": ")",
    "token": "punctuation.bracket",
  },
  {
    "end": 182,
    "start": 172,
    "text": "references",
    "token": "identifier.function",
  },
  {
    "end": 183,
    "start": 182,
    "text": "(",
    "token": "punctuation.bracket",
  },
  {
    "end": 184,
    "start": 183,
    "text": "^",
    "token": "variable.special",
  },
  {
    "end": 185,
    "start": 184,
    "text": ".",
    "token": "accessor",
  },
  {
    "end": 188,
    "start": 185,
    "text": "_id",
    "token": "identifier",
  },
  {
    "end": 189,
    "start": 188,
    "text": ")",
    "token": "punctuation.bracket",
  },
  {
    "end": 195,
    "start": 190,
    "text": "boost",
    "token": "identifier.function",
  },
  {
    "end": 196,
    "start": 195,
    "text": "(",
    "token": "punctuation.bracket",
  },
  {
    "end": 201,
    "start": 196,
    "text": "title",
    "token": "identifier",
  },
  {
    "end": 207,
    "start": 202,
    "text": "match",
    "token": "operator.keyword",
  },
  {
    "end": 210,
    "start": 208,
    "text": "$q",
    "token": "variable",
  },
  {
    "end": 211,
    "start": 210,
    "text": ",",
    "token": "punctuation.delimiter",
  },
  {
    "end": 213,
    "start": 212,
    "text": "3",
    "token": "number",
  },
  {
    "end": 214,
    "start": 213,
    "text": ")",
    "token": "punctuation.bracket",
  },
]
`;

exports[`Lezer tokenizer > functions > tokenizes all functions fixtures > functions/namespaced.groq 1`] = `
[
  {
    "end": 4,
    "start": 0,
    "text": "math",
    "token": "identifier.namespace",
  },
  {
    "end": 6,
    "start": 4,
    "text": "::",
    "token": "punctuation.namespace",
  },
  {
    "end": 9,
    "start": 6,
    "text": "sum",
    "token": "identifier.function",
  },
  {
    "end": 10,
    "start": 9,
    "text": "(",
    "token": "punctuation.bracket",
  },
  {
    "end": 16,
    "start": 10,
    "text": "prices",
    "token": "identifier",
  },
  {
    "end": 17,
    "start": 16,
    "text": ")",
    "token": "punctuation.bracket",
  },
  {
    "end": 22,
    "start": 18,
    "text": "math",
    "token": "identifier.namespace",
  },
  {
    "end": 24,
    "start": 22,
    "text": "::",
    "token": "punctuation.namespace",
  },
  {
    "end": 27,
    "start": 24,
    "text": "avg",
    "token": "identifier.function",
  },
  {
    "end": 28,
    "start": 27,
    "text": "(",
    "token": "punctuation.bracket",
  },
  {
    "end": 34,
    "start": 28,
    "text": "scores",
    "token": "identifier",
  },
  {
    "end": 35,
    "start": 34,
    "text": ")",
    "token": "punctuation.bracket",
  },
  {
    "end": 40,
    "start": 36,
    "text": "math",
    "token": "identifier.namespace",
  },
  {
    "end": 42,
    "start": 40,
    "text": "::",
    "token": "punctuation.namespace",
  },
  {
    "end": 45,
    "start": 42,
    "text": "min",
    "token": "identifier.function",
  },
  {
    "end": 46,
    "start": 45,
    "text": "(",
    "token": "punctuation.bracket",
  },
  {
    "end": 52,
    "start": 46,
    "text": "values",
    "token": "identifier",
  },
  {
    "end": 53,
    "start": 52,
    "text": ")",
    "token": "punctuation.bracket",
  },
  {
    "end": 58,
    "start": 54,
    "text": "math",
    "token": "identifier.namespace",
  },
  {
    "end": 60,
    "start": 58,
    "text": "::",
    "token": "punctuation.namespace",
  },
  {
    "end": 63,
    "start": 60,
    "text": "max",
    "token": "identifier.function",
  },
  {
    "end": 64,
    "start": 63,
    "text": "(",
    "token": "punctuation.bracket",
  },
  {
    "end": 70,
    "start": 64,
    "text": "values",
    "token": "identifier",
  },
  {
    "end": 71,
    "start": 70,
    "text": ")",
    "token": "punctuation.bracket",
  },
  {
    "end": 78,
    "start": 72,
    "text": "string",
    "token": "identifier.namespace",
  },
  {
    "end": 80,
    "start": 78,
    "text": "::",
    "token": "punctuation.namespace",
  },
  {
    "end": 85,
    "start": 80,
    "text": "split",
    "token": "identifier.function",
  },
  {
    "end": 86,
    "start": 85,
    "text": "(",
    "token": "punctuation.bracket",
  },
  {
    "end": 90,
    "start": 86,
    "text": "tags",
    "token": "identifier",
  },
  {
    "end": 91,
    "start": 90,
    "text": ",",
    "token": "punctuation.delimiter",
  },
  {
    "end": 95,
    "start": 92,
    "text": "","",
    "token": "string",
  },
  {
    "end": 96,
    "start": 95,
    "text": ")",
    "token": "punctuation.bracket",
  },
  {
    "end": 103,
    "start": 97,
    "text": "string",
    "token": "identifier.namespace",
  },
  {
    "end": 105,
    "start": 103,
    "text": "::",
    "token": "punctuation.namespace",
  },
  {
    "end": 115,
    "start": 105,
    "text": "startsWith",
    "token": "identifier.function",
  },
  {
    "end": 116,
    "start": 115,
    "text": "(",
    "token": "punctuation.bracket",
  },
  {
    "end": 121,
    "start": 116,
    "text": "title",
    "token": "identifier",
  },
  {
    "end": 122,
    "start": 121,
    "text": ",",
    "token": "punctuation.delimiter",
  },
  {
    "end": 130,
    "start": 123,
    "text": ""Draft"",
    "token": "string",
  },
  {
    "end": 131,
    "start": 130,
    "text": ")",
    "token": "punctuation.bracket",
  },
  {
    "end": 137,
    "start": 132,
    "text": "array",
    "token": "identifier.namespace",
  },
  {
    "end": 139,
    "start": 137,
    "text": "::",
    "token": "punctuation.namespace",
  },
  {
    "end": 143,
    "start": 139,
    "text": "join",
    "token": "identifier.function",
  },
  {
    "end": 144,
    "start": 143,
    "text": "(",
    "token": "punctuation.bracket",
  },
  {
    "end": 149,
    "start": 144,
    "text": "items",
    "token": "identifier",
  },
  {
    "end": 150,
    "start": 149,
    "text": ",",
    "token": "punctuation.delimiter",
  },
  {
    "end": 155,
    "start": 151,
    "text": "", "",
    "token": "string",
  },
  {
    "end": 156,
    "start": 155,
    "text": ")",
    "token": "punctuation.bracket",
  },
  {
    "end": 162,
    "start": 157,
    "text": "array",
    "token": "identifier.namespace",
  },
  {
    "end": 164,
    "start": 162,
    "text": "::",
    "token": "punctuation.namespace",
  },
  {
    "end": 171,
    "start": 164,
    "text": "compact",
    "token": "identifier.function",
  },
  {
    "end": 172,
    "start": 171,
    "text": "(",
    "token": "punctuation.bracket",
  },
  {
    "end": 176,
    "start": 172,
    "text": "list",
    "token": "identifier",
  },
  {
    "end": 177,
    "start": 176,
    "text": ")",
    "token": "punctuation.bracket",
  },
  {
    "end": 183,
    "start": 178,
    "text": "array",
    "token": "identifier.namespace",
  },
  {
    "end": 185,
    "start": 183,
    "text": "::",
    "token": "punctuation.namespace",
  },
  {
    "end": 191,
    "start": 185,
    "text": "unique",
    "token": "identifier.function",
  },
  {
    "end": 192,
    "start": 191,
    "text": "(",
    "token": "punctuation.bracket",
  },
  {
    "end": 195,
    "start": 192,
    "text": "ids",
    "token": "identifier",
  },
  {
    "end": 196,
    "start": 195,
    "text": ")",
    "token": "punctuation.bracket",
  },
  {
    "end": 199,
    "start": 197,
    "text": "pt",
    "token": "identifier.namespace",
  },
  {
    "end": 201,
    "start": 199,
    "text": "::",
    "token": "punctuation.namespace",
  },
  {
    "end": 205,
    "start": 201,
    "text": "text",
    "token": "identifier.function",
  },
  {
    "end": 206,
    "start": 205,
    "text": "(",
    "token": "punctuation.bracket",
  },
  {
    "end": 210,
    "start": 206,
    "text": "body",
    "token": "identifier",
  },
  {
    "end": 211,
    "start": 210,
    "text": ")",
    "token": "punctuation.bracket",
  },
  {
    "end": 215,
    "start": 212,
    "text": "geo",
    "token": "identifier.namespace",
  },
  {
    "end": 217,
    "start": 215,
    "text": "::",
    "token": "punctuation.namespace",
  },
  {
    "end": 225,
    "start": 217,
    "text": "distance",
    "token": "identifier.function",
  },
  {
    "end": 226,
    "start": 225,
    "text": "(",
    "token": "punctuation.bracket",
  },
  {
    "end": 234,
    "start": 226,
    "text": "location",
    "token": "identifier",
  },
  {
    "end": 235,
    "start": 234,
    "text": ",",
    "token": "punctuation.delimiter",
  },
  {
    "end": 242,
    "start": 236,
    "text": "$point",
    "token": "variable",
  },
  {
    "end": 243,
    "start": 242,
    "text": ")",
    "token": "punctuation.bracket",
  },
  {
    "end": 252,
    "start": 244,
    "text": "dateTime",
    "token": "identifier.namespace",
  },
  {
    "end": 254,
    "start": 252,
    "text": "::",
    "token": "punctuation.namespace",
  },
  {
    "end": 257,
    "start": 254,
    "text": "now",
    "token": "identifier.function",
  },
  {
    "end": 258,
    "start": 257,
    "text": "(",
    "token": "punctuation.bracket",
  },
  {
    "end": 259,
    "start": 258,
    "text": ")",
    "token": "punctuation.bracket",
  },
  {
    "end": 265,
    "start": 260,
    "text": "delta",
    "token": "identifier.namespace",
  },
  {
    "end": 267,
    "start": 265,
    "text": "::",
    "token": "punctuation.namespace",
  },
  {
    "end": 276,
    "start": 267,
    "text": "operation",
    "token": "identifier.function",
  },
  {
    "end": 277,
    "start": 276,
    "text": "(",
    "token": "punctuation.bracket",
  },
  {
    "end": 278,
    "start": 277,
    "text": ")",
    "token": "punctuation.bracket",
  },
  {
    "end": 285,
    "start": 279,
    "text": "sanity",
    "token": "identifier.namespace",
  },
  {
    "end": 287,
    "start": 285,
    "text": "::",
    "token": "punctuation.namespace",
  },
  {
    "end": 296,
    "start": 287,
    "text": "projectId",
    "token": "identifier.function",
  },
  {
    "end": 297,
    "start": 296,
    "text": "(",
    "token": "punctuation.bracket",
  },
  {
    "end": 298,
    "start": 297,
    "text": ")",
    "token": "punctuation.bracket",
  },
]
`;

exports[`Lezer tokenizer > functions > tokenizes all functions fixtures > functions/unknown-namespace.groq 1`] = `
[
  {
    "end": 6,
    "start": 0,
    "text": "custom",
    "token": "identifier.namespace",
  },
  {
    "end": 8,
    "start": 6,
    "text": "::",
    "token": "punctuation.namespace",
  },
  {
    "end": 19,
    "start": 8,
    "text": "doSomething",
    "token": "identifier.function",
  },
  {
    "end": 20,
    "start": 19,
    "text": "(",
    "token": "punctuation.bracket",
  },
  {
    "end": 23,
    "start": 20,
    "text": "arg",
    "token": "identifier",
  },
  {
    "end": 24,
    "start": 23,
    "text": ")",
    "token": "punctuation.bracket",
  },
  {
    "end": 33,
    "start": 25,
    "text": "myPlugin",
    "token": "identifier.namespace",
  },
  {
    "end": 35,
    "start": 33,
    "text": "::",
    "token": "punctuation.namespace",
  },
  {
    "end": 44,
    "start": 35,
    "text": "transform",
    "token": "identifier.function",
  },
  {
    "end": 45,
    "start": 44,
    "text": "(",
    "token": "punctuation.bracket",
  },
  {
    "end": 49,
    "start": 45,
    "text": "data",
    "token": "identifier",
  },
  {
    "end": 50,
    "start": 49,
    "text": ")",
    "token": "punctuation.bracket",
  },
]
`;

exports[`Lezer tokenizer > operators > tokenizes all operators fixtures > operators/arithmetic.groq 1`] = `
[
  {
    "end": 5,
    "start": 0,
    "text": "price",
    "token": "identifier",
  },
  {
    "end": 7,
    "start": 6,
    "text": "+",
    "token": "operator",
  },
  {
    "end": 11,
    "start": 8,
    "text": "tax",
    "token": "identifier",
  },
  {
    "end": 17,
    "start": 12,
    "text": "price",
    "token": "identifier",
  },
  {
    "end": 19,
    "start": 18,
    "text": "-",
    "token": "operator",
  },
  {
    "end": 28,
    "start": 20,
    "text": "discount",
    "token": "identifier",
  },
  {
    "end": 34,
    "start": 29,
    "text": "count",
    "token": "identifier",
  },
  {
    "end": 36,
    "start": 35,
    "text": "*",
    "token": "wildcard",
  },
  {
    "end": 38,
    "start": 37,
    "text": "2",
    "token": "number",
  },
  {
    "end": 44,
    "start": 39,
    "text": "total",
    "token": "identifier",
  },
  {
    "end": 46,
    "start": 45,
    "text": "/",
    "token": "operator",
  },
  {
    "end": 52,
    "start": 47,
    "text": "items",
    "token": "identifier",
  },
  {
    "end": 58,
    "start": 53,
    "text": "index",
    "token": "identifier",
  },
  {
    "end": 60,
    "start": 59,
    "text": "%",
    "token": "operator",
  },
  {
    "end": 62,
    "start": 61,
    "text": "2",
    "token": "number",
  },
  {
    "end": 67,
    "start": 63,
    "text": "base",
    "token": "identifier",
  },
  {
    "end": 70,
    "start": 68,
    "text": "**",
    "token": "operator",
  },
  {
    "end": 79,
    "start": 71,
    "text": "exponent",
    "token": "identifier",
  },
]
`;

exports[`Lezer tokenizer > operators > tokenizes all operators fixtures > operators/comparison.groq 1`] = `
[
  {
    "end": 1,
    "start": 0,
    "text": "*",
    "token": "wildcard",
  },
  {
    "end": 2,
    "start": 1,
    "text": "[",
    "token": "punctuation.bracket",
  },
  {
    "end": 7,
    "start": 2,
    "text": "score",
    "token": "identifier",
  },
  {
    "end": 10,
    "start": 8,
    "text": "==",
    "token": "operator",
  },
  {
    "end": 14,
    "start": 11,
    "text": "100",
    "token": "number",
  },
  {
    "end": 15,
    "start": 14,
    "text": "]",
    "token": "punctuation.bracket",
  },
  {
    "end": 17,
    "start": 16,
    "text": "*",
    "token": "wildcard",
  },
  {
    "end": 18,
    "start": 17,
    "text": "[",
    "token": "punctuation.bracket",
  },
  {
    "end": 23,
    "start": 18,
    "text": "score",
    "token": "identifier",
  },
  {
    "end": 26,
    "start": 24,
    "text": "!=",
    "token": "operator",
  },
  {
    "end": 28,
    "start": 27,
    "text": "0",
    "token": "number",
  },
  {
    "end": 29,
    "start": 28,
    "text": "]",
    "token": "punctuation.bracket",
  },
  {
    "end": 31,
    "start": 30,
    "text": "*",
    "token": "wildcard",
  },
  {
    "end": 32,
    "start": 31,
    "text": "[",
    "token": "punctuation.bracket",
  },
  {
    "end": 35,
    "start": 32,
    "text": "age",
    "token": "identifier",
  },
  {
    "end": 37,
    "start": 36,
    "text": ">",
    "token": "operator",
  },
  {
    "end": 40,
    "start": 38,
    "text": "18",
    "token": "number",
  },
  {
    "end": 41,
    "start": 40,
    "text": "]",
    "token": "punctuation.bracket",
  },
  {
    "end": 43,
    "start": 42,
    "text": "*",
    "token": "wildcard",
  },
  {
    "end": 44,
    "start": 43,
    "text": "[",
    "token": "punctuation.bracket",
  },
  {
    "end": 47,
    "start": 44,
    "text": "age",
    "token": "identifier",
  },
  {
    "end": 49,
    "start": 48,
    "text": "<",
    "token": "operator",
  },
  {
    "end": 52,
    "start": 50,
    "text": "65",
    "token": "number",
  },
  {
    "end": 53,
    "start": 52,
    "text": "]",
    "token": "punctuation.bracket",
  },
  {
    "end": 55,
    "start": 54,
    "text": "*",
    "token": "wildcard",
  },
  {
    "end": 56,
    "start": 55,
    "text": "[",
    "token": "punctuation.bracket",
  },
  {
    "end": 59,
    "start": 56,
    "text": "age",
    "token": "identifier",
  },
  {
    "end": 62,
    "start": 60,
    "text": ">=",
    "token": "operator",
  },
  {
    "end": 65,
    "start": 63,
    "text": "21",
    "token": "number",
  },
  {
    "end": 66,
    "start": 65,
    "text": "]",
    "token": "punctuation.bracket",
  },
  {
    "end": 68,
    "start": 67,
    "text": "*",
    "token": "wildcard",
  },
  {
    "end": 69,
    "start": 68,
    "text": "[",
    "token": "punctuation.bracket",
  },
  {
    "end": 72,
    "start": 69,
    "text": "age",
    "token": "identifier",
  },
  {
    "end": 75,
    "start": 73,
    "text": "<=",
    "token": "operator",
  },
  {
    "end": 78,
    "start": 76,
    "text": "99",
    "token": "number",
  },
  {
    "end": 79,
    "start": 78,
    "text": "]",
    "token": "punctuation.bracket",
  },
]
`;

exports[`Lezer tokenizer > operators > tokenizes all operators fixtures > operators/keyword-ops.groq 1`] = `
[
  {
    "end": 1,
    "start": 0,
    "text": "*",
    "token": "wildcard",
  },
  {
    "end": 2,
    "start": 1,
    "text": "[",
    "token": "punctuation.bracket",
  },
  {
    "end": 7,
    "start": 2,
    "text": "_type",
    "token": "identifier",
  },
  {
    "end": 10,
    "start": 8,
    "text": "in",
    "token": "operator.keyword",
  },
  {
    "end": 12,
    "start": 11,
    "text": "[",
    "token": "punctuation.bracket",
  },
  {
    "end": 18,
    "start": 12,
    "text": ""post"",
    "token": "string",
  },
  {
    "end": 19,
    "start": 18,
    "text": ",",
    "token": "punctuation.delimiter",
  },
  {
    "end": 29,
    "start": 20,
    "text": ""article"",
    "token": "string",
  },
  {
    "end": 30,
    "start": 29,
    "text": "]",
    "token": "punctuation.bracket",
  },
  {
    "end": 31,
    "start": 30,
    "text": "]",
    "token": "punctuation.bracket",
  },
  {
    "end": 33,
    "start": 32,
    "text": "*",
    "token": "wildcard",
  },
  {
    "end": 34,
    "start": 33,
    "text": "[",
    "token": "punctuation.bracket",
  },
  {
    "end": 39,
    "start": 34,
    "text": "title",
    "token": "identifier",
  },
  {
    "end": 45,
    "start": 40,
    "text": "match",
    "token": "operator.keyword",
  },
  {
    "end": 54,
    "start": 46,
    "text": ""hello*"",
    "token": "string",
  },
  {
    "end": 55,
    "start": 54,
    "text": "]",
    "token": "punctuation.bracket",
  },
]
`;

exports[`Lezer tokenizer > operators > tokenizes all operators fixtures > operators/logical.groq 1`] = `
[
  {
    "end": 1,
    "start": 0,
    "text": "*",
    "token": "wildcard",
  },
  {
    "end": 2,
    "start": 1,
    "text": "[",
    "token": "punctuation.bracket",
  },
  {
    "end": 3,
    "start": 2,
    "text": "a",
    "token": "identifier",
  },
  {
    "end": 6,
    "start": 4,
    "text": "&&",
    "token": "operator",
  },
  {
    "end": 8,
    "start": 7,
    "text": "b",
    "token": "identifier",
  },
  {
    "end": 9,
    "start": 8,
    "text": "]",
    "token": "punctuation.bracket",
  },
  {
    "end": 11,
    "start": 10,
    "text": "*",
    "token": "wildcard",
  },
  {
    "end": 12,
    "start": 11,
    "text": "[",
    "token": "punctuation.bracket",
  },
  {
    "end": 13,
    "start": 12,
    "text": "a",
    "token": "identifier",
  },
  {
    "end": 16,
    "start": 14,
    "text": "||",
    "token": "operator",
  },
  {
    "end": 18,
    "start": 17,
    "text": "b",
    "token": "identifier",
  },
  {
    "end": 19,
    "start": 18,
    "text": "]",
    "token": "punctuation.bracket",
  },
  {
    "end": 21,
    "start": 20,
    "text": "*",
    "token": "wildcard",
  },
  {
    "end": 22,
    "start": 21,
    "text": "[",
    "token": "punctuation.bracket",
  },
  {
    "end": 23,
    "start": 22,
    "text": "!",
    "token": "operator",
  },
  {
    "end": 32,
    "start": 23,
    "text": "published",
    "token": "identifier",
  },
  {
    "end": 33,
    "start": 32,
    "text": "]",
    "token": "punctuation.bracket",
  },
]
`;

exports[`Lezer tokenizer > operators > tokenizes all operators fixtures > operators/pair.groq 1`] = `
[
  {
    "end": 6,
    "start": 0,
    "text": "select",
    "token": "identifier.function",
  },
  {
    "end": 7,
    "start": 6,
    "text": "(",
    "token": "punctuation.bracket",
  },
  {
    "end": 12,
    "start": 7,
    "text": "_type",
    "token": "identifier",
  },
  {
    "end": 15,
    "start": 13,
    "text": "==",
    "token": "operator",
  },
  {
    "end": 22,
    "start": 16,
    "text": ""post"",
    "token": "string",
  },
  {
    "end": 25,
    "start": 23,
    "text": "=>",
    "token": "operator.arrow",
  },
  {
    "end": 32,
    "start": 26,
    "text": ""blog"",
    "token": "string",
  },
  {
    "end": 33,
    "start": 32,
    "text": ",",
    "token": "punctuation.delimiter",
  },
  {
    "end": 41,
    "start": 34,
    "text": ""other"",
    "token": "string",
  },
  {
    "end": 42,
    "start": 41,
    "text": ")",
    "token": "punctuation.bracket",
  },
]
`;

exports[`Lezer tokenizer > operators > tokenizes all operators fixtures > operators/range.groq 1`] = `
[
  {
    "end": 1,
    "start": 0,
    "text": "*",
    "token": "wildcard",
  },
  {
    "end": 2,
    "start": 1,
    "text": "[",
    "token": "punctuation.bracket",
  },
  {
    "end": 7,
    "start": 2,
    "text": "_type",
    "token": "identifier",
  },
  {
    "end": 10,
    "start": 8,
    "text": "==",
    "token": "operator",
  },
  {
    "end": 17,
    "start": 11,
    "text": ""post"",
    "token": "string",
  },
  {
    "end": 18,
    "start": 17,
    "text": "]",
    "token": "punctuation.bracket",
  },
  {
    "end": 19,
    "start": 18,
    "text": "[",
    "token": "punctuation.bracket",
  },
  {
    "end": 20,
    "start": 19,
    "text": "0",
    "token": "number",
  },
  {
    "end": 22,
    "start": 20,
    "text": "..",
    "token": "operator.range",
  },
  {
    "end": 23,
    "start": 22,
    "text": "5",
    "token": "number",
  },
  {
    "end": 24,
    "start": 23,
    "text": "]",
    "token": "punctuation.bracket",
  },
  {
    "end": 26,
    "start": 25,
    "text": "*",
    "token": "wildcard",
  },
  {
    "end": 27,
    "start": 26,
    "text": "[",
    "token": "punctuation.bracket",
  },
  {
    "end": 32,
    "start": 27,
    "text": "_type",
    "token": "identifier",
  },
  {
    "end": 35,
    "start": 33,
    "text": "==",
    "token": "operator",
  },
  {
    "end": 42,
    "start": 36,
    "text": ""post"",
    "token": "string",
  },
  {
    "end": 43,
    "start": 42,
    "text": "]",
    "token": "punctuation.bracket",
  },
  {
    "end": 44,
    "start": 43,
    "text": "[",
    "token": "punctuation.bracket",
  },
  {
    "end": 45,
    "start": 44,
    "text": "0",
    "token": "number",
  },
  {
    "end": 48,
    "start": 45,
    "text": "...",
    "token": "operator.spread",
  },
  {
    "end": 50,
    "start": 48,
    "text": "10",
    "token": "number",
  },
  {
    "end": 51,
    "start": 50,
    "text": "]",
    "token": "punctuation.bracket",
  },
  {
    "end": 53,
    "start": 52,
    "text": "*",
    "token": "wildcard",
  },
  {
    "end": 54,
    "start": 53,
    "text": "[",
    "token": "punctuation.bracket",
  },
  {
    "end": 57,
    "start": 54,
    "text": "age",
    "token": "identifier",
  },
  {
    "end": 60,
    "start": 58,
    "text": "in",
    "token": "operator.keyword",
  },
  {
    "end": 63,
    "start": 61,
    "text": "18",
    "token": "number",
  },
  {
    "end": 65,
    "start": 63,
    "text": "..",
    "token": "operator.range",
  },
  {
    "end": 67,
    "start": 65,
    "text": "65",
    "token": "number",
  },
  {
    "end": 68,
    "start": 67,
    "text": "]",
    "token": "punctuation.bracket",
  },
]
`;

exports[`Lezer tokenizer > operators > tokenizes all operators fixtures > operators/spread.groq 1`] = `
[
  {
    "end": 1,
    "start": 0,
    "text": "{",
    "token": "punctuation.bracket",
  },
  {
    "end": 4,
    "start": 1,
    "text": "...",
    "token": "operator.spread",
  },
  {
    "end": 5,
    "start": 4,
    "text": ",",
    "token": "punctuation.delimiter",
  },
  {
    "end": 13,
    "start": 6,
    "text": ""extra"",
    "token": "string",
  },
  {
    "end": 14,
    "start": 13,
    "text": ":",
    "token": "punctuation.delimiter",
  },
  {
    "end": 19,
    "start": 15,
    "text": "true",
    "token": "keyword",
  },
  {
    "end": 20,
    "start": 19,
    "text": "}",
    "token": "punctuation.bracket",
  },
]
`;

exports[`Lezer tokenizer > pipes > tokenizes all pipes fixtures > pipes/chained.groq 1`] = `
[
  {
    "end": 1,
    "start": 0,
    "text": "*",
    "token": "wildcard",
  },
  {
    "end": 2,
    "start": 1,
    "text": "[",
    "token": "punctuation.bracket",
  },
  {
    "end": 7,
    "start": 2,
    "text": "_type",
    "token": "identifier",
  },
  {
    "end": 10,
    "start": 8,
    "text": "==",
    "token": "operator",
  },
  {
    "end": 17,
    "start": 11,
    "text": ""post"",
    "token": "string",
  },
  {
    "end": 18,
    "start": 17,
    "text": "]",
    "token": "punctuation.bracket",
  },
  {
    "end": 20,
    "start": 19,
    "text": "|",
    "token": "operator.pipe",
  },
  {
    "end": 26,
    "start": 21,
    "text": "order",
    "token": "identifier.function",
  },
  {
    "end": 27,
    "start": 26,
    "text": "(",
    "token": "punctuation.bracket",
  },
  {
    "end": 38,
    "start": 27,
    "text": "publishedAt",
    "token": "identifier",
  },
  {
    "end": 43,
    "start": 39,
    "text": "desc",
    "token": "operator.keyword",
  },
  {
    "end": 44,
    "start": 43,
    "text": ")",
    "token": "punctuation.bracket",
  },
  {
    "end": 46,
    "start": 45,
    "text": "[",
    "token": "punctuation.bracket",
  },
  {
    "end": 47,
    "start": 46,
    "text": "0",
    "token": "number",
  },
  {
    "end": 50,
    "start": 47,
    "text": "...",
    "token": "operator.spread",
  },
  {
    "end": 52,
    "start": 50,
    "text": "10",
    "token": "number",
  },
  {
    "end": 53,
    "start": 52,
    "text": "]",
    "token": "punctuation.bracket",
  },
  {
    "end": 55,
    "start": 54,
    "text": "{",
    "token": "punctuation.bracket",
  },
  {
    "end": 60,
    "start": 55,
    "text": "title",
    "token": "identifier",
  },
  {
    "end": 61,
    "start": 60,
    "text": ",",
    "token": "punctuation.delimiter",
  },
  {
    "end": 66,
    "start": 62,
    "text": "slug",
    "token": "identifier",
  },
  {
    "end": 67,
    "start": 66,
    "text": "}",
    "token": "punctuation.bracket",
  },
]
`;

exports[`Lezer tokenizer > pipes > tokenizes all pipes fixtures > pipes/order.groq 1`] = `
[
  {
    "end": 1,
    "start": 0,
    "text": "|",
    "token": "operator.pipe",
  },
  {
    "end": 7,
    "start": 2,
    "text": "order",
    "token": "identifier.function",
  },
  {
    "end": 8,
    "start": 7,
    "text": "(",
    "token": "punctuation.bracket",
  },
  {
    "end": 13,
    "start": 8,
    "text": "title",
    "token": "identifier",
  },
  {
    "end": 17,
    "start": 14,
    "text": "asc",
    "token": "operator.keyword",
  },
  {
    "end": 18,
    "start": 17,
    "text": ")",
    "token": "punctuation.bracket",
  },
  {
    "end": 20,
    "start": 19,
    "text": "|",
    "token": "operator.pipe",
  },
  {
    "end": 26,
    "start": 21,
    "text": "order",
    "token": "identifier.function",
  },
  {
    "end": 27,
    "start": 26,
    "text": "(",
    "token": "punctuation.bracket",
  },
  {
    "end": 38,
    "start": 27,
    "text": "publishedAt",
    "token": "identifier",
  },
  {
    "end": 43,
    "start": 39,
    "text": "desc",
    "token": "operator.keyword",
  },
  {
    "end": 44,
    "start": 43,
    "text": ",",
    "token": "punctuation.delimiter",
  },
  {
    "end": 55,
    "start": 45,
    "text": "_createdAt",
    "token": "identifier",
  },
  {
    "end": 60,
    "start": 56,
    "text": "desc",
    "token": "operator.keyword",
  },
  {
    "end": 61,
    "start": 60,
    "text": ")",
    "token": "punctuation.bracket",
  },
]
`;

exports[`Lezer tokenizer > pipes > tokenizes all pipes fixtures > pipes/score.groq 1`] = `
[
  {
    "end": 1,
    "start": 0,
    "text": "|",
    "token": "operator.pipe",
  },
  {
    "end": 7,
    "start": 2,
    "text": "score",
    "token": "identifier.function",
  },
  {
    "end": 8,
    "start": 7,
    "text": "(",
    "token": "punctuation.bracket",
  },
  {
    "end": 13,
    "start": 8,
    "text": "title",
    "token": "identifier",
  },
  {
    "end": 19,
    "start": 14,
    "text": "match",
    "token": "operator.keyword",
  },
  {
    "end": 26,
    "start": 20,
    "text": "$query",
    "token": "variable",
  },
  {
    "end": 27,
    "start": 26,
    "text": ",",
    "token": "punctuation.delimiter",
  },
  {
    "end": 33,
    "start": 28,
    "text": "boost",
    "token": "identifier.function",
  },
  {
    "end": 34,
    "start": 33,
    "text": "(",
    "token": "punctuation.bracket",
  },
  {
    "end": 38,
    "start": 34,
    "text": "body",
    "token": "identifier",
  },
  {
    "end": 44,
    "start": 39,
    "text": "match",
    "token": "operator.keyword",
  },
  {
    "end": 51,
    "start": 45,
    "text": "$query",
    "token": "variable",
  },
  {
    "end": 52,
    "start": 51,
    "text": ",",
    "token": "punctuation.delimiter",
  },
  {
    "end": 56,
    "start": 53,
    "text": "0.5",
    "token": "number",
  },
  {
    "end": 57,
    "start": 56,
    "text": ")",
    "token": "punctuation.bracket",
  },
  {
    "end": 58,
    "start": 57,
    "text": ")",
    "token": "punctuation.bracket",
  },
]
`;

exports[`Lezer tokenizer > real-world > tokenizes all real-world fixtures > real-world/blog-query.groq 1`] = `
[
  {
    "end": 1,
    "start": 0,
    "text": "*",
    "token": "wildcard",
  },
  {
    "end": 2,
    "start": 1,
    "text": "[",
    "token": "punctuation.bracket",
  },
  {
    "end": 7,
    "start": 2,
    "text": "_type",
    "token": "identifier",
  },
  {
    "end": 10,
    "start": 8,
    "text": "==",
    "token": "operator",
  },
  {
    "end": 17,
    "start": 11,
    "text": ""post"",
    "token": "string",
  },
  {
    "end": 20,
    "start": 18,
    "text": "&&",
    "token": "operator",
  },
  {
    "end": 22,
    "start": 21,
    "text": "!",
    "token": "operator",
  },
  {
    "end": 23,
    "start": 22,
    "text": "(",
    "token": "punctuation.bracket",
  },
  {
    "end": 26,
    "start": 23,
    "text": "_id",
    "token": "identifier",
  },
  {
    "end": 29,
    "start": 27,
    "text": "in",
    "token": "operator.keyword",
  },
  {
    "end": 34,
    "start": 30,
    "text": "path",
    "token": "identifier.function",
  },
  {
    "end": 35,
    "start": 34,
    "text": "(",
    "token": "punctuation.bracket",
  },
  {
    "end": 46,
    "start": 35,
    "text": ""drafts.**"",
    "token": "string",
  },
  {
    "end": 47,
    "start": 46,
    "text": ")",
    "token": "punctuation.bracket",
  },
  {
    "end": 48,
    "start": 47,
    "text": ")",
    "token": "punctuation.bracket",
  },
  {
    "end": 49,
    "start": 48,
    "text": "]",
    "token": "punctuation.bracket",
  },
  {
    "end": 51,
    "start": 50,
    "text": "|",
    "token": "operator.pipe",
  },
  {
    "end": 57,
    "start": 52,
    "text": "order",
    "token": "identifier.function",
  },
  {
    "end": 58,
    "start": 57,
    "text": "(",
    "token": "punctuation.bracket",
  },
  {
    "end": 69,
    "start": 58,
    "text": "publishedAt",
    "token": "identifier",
  },
  {
    "end": 74,
    "start": 70,
    "text": "desc",
    "token": "operator.keyword",
  },
  {
    "end": 75,
    "start": 74,
    "text": ")",
    "token": "punctuation.bracket",
  },
  {
    "end": 77,
    "start": 76,
    "text": "[",
    "token": "punctuation.bracket",
  },
  {
    "end": 78,
    "start": 77,
    "text": "0",
    "token": "number",
  },
  {
    "end": 81,
    "start": 78,
    "text": "...",
    "token": "operator.spread",
  },
  {
    "end": 83,
    "start": 81,
    "text": "10",
    "token": "number",
  },
  {
    "end": 84,
    "start": 83,
    "text": "]",
    "token": "punctuation.bracket",
  },
  {
    "end": 86,
    "start": 85,
    "text": "{",
    "token": "punctuation.bracket",
  },
  {
    "end": 94,
    "start": 89,
    "text": "title",
    "token": "identifier",
  },
  {
    "end": 95,
    "start": 94,
    "text": ",",
    "token": "punctuation.delimiter",
  },
  {
    "end": 102,
    "start": 98,
    "text": "slug",
    "token": "identifier",
  },
  {
    "end": 103,
    "start": 102,
    "text": ",",
    "token": "punctuation.delimiter",
  },
  {
    "end": 117,
    "start": 106,
    "text": "publishedAt",
    "token": "identifier",
  },
  {
    "end": 118,
    "start": 117,
    "text": ",",
    "token": "punctuation.delimiter",
  },
  {
    "end": 130,
    "start": 121,
    "text": ""excerpt"",
    "token": "string",
  },
  {
    "end": 131,
    "start": 130,
    "text": ":",
    "token": "punctuation.delimiter",
  },
  {
    "end": 134,
    "start": 132,
    "text": "pt",
    "token": "identifier.namespace",
  },
  {
    "end": 136,
    "start": 134,
    "text": "::",
    "token": "punctuation.namespace",
  },
  {
    "end": 140,
    "start": 136,
    "text": "text",
    "token": "identifier.function",
  },
  {
    "end": 141,
    "start": 140,
    "text": "(",
    "token": "punctuation.bracket",
  },
  {
    "end": 145,
    "start": 141,
    "text": "body",
    "token": "identifier",
  },
  {
    "end": 146,
    "start": 145,
    "text": "[",
    "token": "punctuation.bracket",
  },
  {
    "end": 147,
    "start": 146,
    "text": "0",
    "token": "number",
  },
  {
    "end": 149,
    "start": 147,
    "text": "..",
    "token": "operator.range",
  },
  {
    "end": 150,
    "start": 149,
    "text": "1",
    "token": "number",
  },
  {
    "end": 151,
    "start": 150,
    "text": "]",
    "token": "punctuation.bracket",
  },
  {
    "end": 152,
    "start": 151,
    "text": ")",
    "token": "punctuation.bracket",
  },
  {
    "end": 153,
    "start": 152,
    "text": ",",
    "token": "punctuation.delimiter",
  },
  {
    "end": 164,
    "start": 156,
    "text": ""author"",
    "token": "string",
  },
  {
    "end": 165,
    "start": 164,
    "text": ":",
    "token": "punctuation.delimiter",
  },
  {
    "end": 172,
    "start": 166,
    "text": "author",
    "token": "identifier",
  },
  {
    "end": 174,
    "start": 172,
    "text": "->",
    "token": "accessor",
  },
  {
    "end": 176,
    "start": 175,
    "text": "{",
    "token": "punctuation.bracket",
  },
  {
    "end": 185,
    "start": 181,
    "text": "name",
    "token": "identifier",
  },
  {
    "end": 186,
    "start": 185,
    "text": ",",
    "token": "punctuation.delimiter",
  },
  {
    "end": 199,
    "start": 191,
    "text": ""avatar"",
    "token": "string",
  },
  {
    "end": 200,
    "start": 199,
    "text": ":",
    "token": "punctuation.delimiter",
  },
  {
    "end": 206,
    "start": 201,
    "text": "image",
    "token": "identifier",
  },
  {
    "end": 207,
    "start": 206,
    "text": ".",
    "token": "accessor",
  },
  {
    "end": 212,
    "start": 207,
    "text": "asset",
    "token": "identifier",
  },
  {
    "end": 214,
    "start": 212,
    "text": "->",
    "token": "accessor",
  },
  {
    "end": 217,
    "start": 214,
    "text": "url",
    "token": "identifier",
  },
  {
    "end": 221,
    "start": 220,
    "text": "}",
    "token": "punctuation.bracket",
  },
  {
    "end": 222,
    "start": 221,
    "text": ",",
    "token": "punctuation.delimiter",
  },
  {
    "end": 237,
    "start": 225,
    "text": ""categories"",
    "token": "string",
  },
  {
    "end": 238,
    "start": 237,
    "text": ":",
    "token": "punctuation.delimiter",
  },
  {
    "end": 249,
    "start": 239,
    "text": "categories",
    "token": "identifier",
  },
  {
    "end": 250,
    "start": 249,
    "text": "[",
    "token": "punctuation.bracket",
  },
  {
    "end": 251,
    "start": 250,
    "text": "]",
    "token": "punctuation.bracket",
  },
  {
    "end": 253,
    "start": 251,
    "text": "->",
    "token": "accessor",
  },
  {
    "end": 255,
    "start": 254,
    "text": "{",
    "token": "punctuation.bracket",
  },
  {
    "end": 265,
    "start": 260,
    "text": "title",
    "token": "identifier",
  },
  {
    "end": 266,
    "start": 265,
    "text": ",",
    "token": "punctuation.delimiter",
  },
  {
    "end": 275,
    "start": 271,
    "text": "slug",
    "token": "identifier",
  },
  {
    "end": 279,
    "start": 278,
    "text": "}",
    "token": "punctuation.bracket",
  },
  {
    "end": 281,
    "start": 280,
    "text": "}",
    "token": "punctuation.bracket",
  },
]
`;

exports[`Lezer tokenizer > real-world > tokenizes all real-world fixtures > real-world/content-lake.groq 1`] = `
[
  {
    "end": 1,
    "start": 0,
    "text": "{",
    "token": "punctuation.bracket",
  },
  {
    "end": 11,
    "start": 4,
    "text": ""posts"",
    "token": "string",
  },
  {
    "end": 12,
    "start": 11,
    "text": ":",
    "token": "punctuation.delimiter",
  },
  {
    "end": 14,
    "start": 13,
    "text": "*",
    "token": "wildcard",
  },
  {
    "end": 15,
    "start": 14,
    "text": "[",
    "token": "punctuation.bracket",
  },
  {
    "end": 20,
    "start": 15,
    "text": "_type",
    "token": "identifier",
  },
  {
    "end": 23,
    "start": 21,
    "text": "==",
    "token": "operator",
  },
  {
    "end": 30,
    "start": 24,
    "text": ""post"",
    "token": "string",
  },
  {
    "end": 31,
    "start": 30,
    "text": "]",
    "token": "punctuation.bracket",
  },
  {
    "end": 33,
    "start": 32,
    "text": "|",
    "token": "operator.pipe",
  },
  {
    "end": 39,
    "start": 34,
    "text": "order",
    "token": "identifier.function",
  },
  {
    "end": 40,
    "start": 39,
    "text": "(",
    "token": "punctuation.bracket",
  },
  {
    "end": 51,
    "start": 40,
    "text": "publishedAt",
    "token": "identifier",
  },
  {
    "end": 56,
    "start": 52,
    "text": "desc",
    "token": "operator.keyword",
  },
  {
    "end": 57,
    "start": 56,
    "text": ")",
    "token": "punctuation.bracket",
  },
  {
    "end": 59,
    "start": 58,
    "text": "[",
    "token": "punctuation.bracket",
  },
  {
    "end": 60,
    "start": 59,
    "text": "0",
    "token": "number",
  },
  {
    "end": 63,
    "start": 60,
    "text": "...",
    "token": "operator.spread",
  },
  {
    "end": 64,
    "start": 63,
    "text": "5",
    "token": "number",
  },
  {
    "end": 65,
    "start": 64,
    "text": "]",
    "token": "punctuation.bracket",
  },
  {
    "end": 67,
    "start": 66,
    "text": "{",
    "token": "punctuation.bracket",
  },
  {
    "end": 77,
    "start": 72,
    "text": "title",
    "token": "identifier",
  },
  {
    "end": 78,
    "start": 77,
    "text": ",",
    "token": "punctuation.delimiter",
  },
  {
    "end": 91,
    "start": 83,
    "text": ""author"",
    "token": "string",
  },
  {
    "end": 92,
    "start": 91,
    "text": ":",
    "token": "punctuation.delimiter",
  },
  {
    "end": 99,
    "start": 93,
    "text": "author",
    "token": "identifier",
  },
  {
    "end": 101,
    "start": 99,
    "text": "->",
    "token": "accessor",
  },
  {
    "end": 105,
    "start": 101,
    "text": "name",
    "token": "identifier",
  },
  {
    "end": 109,
    "start": 108,
    "text": "}",
    "token": "punctuation.bracket",
  },
  {
    "end": 110,
    "start": 109,
    "text": ",",
    "token": "punctuation.delimiter",
  },
  {
    "end": 122,
    "start": 113,
    "text": ""authors"",
    "token": "string",
  },
  {
    "end": 123,
    "start": 122,
    "text": ":",
    "token": "punctuation.delimiter",
  },
  {
    "end": 125,
    "start": 124,
    "text": "*",
    "token": "wildcard",
  },
  {
    "end": 126,
    "start": 125,
    "text": "[",
    "token": "punctuation.bracket",
  },
  {
    "end": 131,
    "start": 126,
    "text": "_type",
    "token": "identifier",
  },
  {
    "end": 134,
    "start": 132,
    "text": "==",
    "token": "operator",
  },
  {
    "end": 143,
    "start": 135,
    "text": ""author"",
    "token": "string",
  },
  {
    "end": 144,
    "start": 143,
    "text": "]",
    "token": "punctuation.bracket",
  },
  {
    "end": 146,
    "start": 145,
    "text": "{",
    "token": "punctuation.bracket",
  },
  {
    "end": 155,
    "start": 151,
    "text": "name",
    "token": "identifier",
  },
  {
    "end": 156,
    "start": 155,
    "text": ",",
    "token": "punctuation.delimiter",
  },
  {
    "end": 172,
    "start": 161,
    "text": ""postCount"",
    "token": "string",
  },
  {
    "end": 173,
    "start": 172,
    "text": ":",
    "token": "punctuation.delimiter",
  },
  {
    "end": 179,
    "start": 174,
    "text": "count",
    "token": "identifier.function",
  },
  {
    "end": 180,
    "start": 179,
    "text": "(",
    "token": "punctuation.bracket",
  },
  {
    "end": 181,
    "start": 180,
    "text": "*",
    "token": "wildcard",
  },
  {
    "end": 182,
    "start": 181,
    "text": "[",
    "token": "punctuation.bracket",
  },
  {
    "end": 187,
    "start": 182,
    "text": "_type",
    "token": "identifier",
  },
  {
    "end": 190,
    "start": 188,
    "text": "==",
    "token": "operator",
  },
  {
    "end": 197,
    "start": 191,
    "text": ""post"",
    "token": "string",
  },
  {
    "end": 200,
    "start": 198,
    "text": "&&",
    "token": "operator",
  },
  {
    "end": 211,
    "start": 201,
    "text": "references",
    "token": "identifier.function",
  },
  {
    "end": 212,
    "start": 211,
    "text": "(",
    "token": "punctuation.bracket",
  },
  {
    "end": 213,
    "start": 212,
    "text": "^",
    "token": "variable.special",
  },
  {
    "end": 214,
    "start": 213,
    "text": ".",
    "token": "accessor",
  },
  {
    "end": 217,
    "start": 214,
    "text": "_id",
    "token": "identifier",
  },
  {
    "end": 218,
    "start": 217,
    "text": ")",
    "token": "punctuation.bracket",
  },
  {
    "end": 219,
    "start": 218,
    "text": "]",
    "token": "punctuation.bracket",
  },
  {
    "end": 220,
    "start": 219,
    "text": ")",
    "token": "punctuation.bracket",
  },
  {
    "end": 224,
    "start": 223,
    "text": "}",
    "token": "punctuation.bracket",
  },
  {
    "end": 225,
    "start": 224,
    "text": ",",
    "token": "punctuation.delimiter",
  },
  {
    "end": 234,
    "start": 228,
    "text": ""tags"",
    "token": "string",
  },
  {
    "end": 235,
    "start": 234,
    "text": ":",
    "token": "punctuation.delimiter",
  },
  {
    "end": 241,
    "start": 236,
    "text": "array",
    "token": "identifier.namespace",
  },
  {
    "end": 243,
    "start": 241,
    "text": "::",
    "token": "punctuation.namespace",
  },
  {
    "end": 249,
    "start": 243,
    "text": "unique",
    "token": "identifier.function",
  },
  {
    "end": 250,
    "start": 249,
    "text": "(",
    "token": "punctuation.bracket",
  },
  {
    "end": 251,
    "start": 250,
    "text": "*",
    "token": "wildcard",
  },
  {
    "end": 252,
    "start": 251,
    "text": "[",
    "token": "punctuation.bracket",
  },
  {
    "end": 257,
    "start": 252,
    "text": "_type",
    "token": "identifier",
  },
  {
    "end": 260,
    "start": 258,
    "text": "==",
    "token": "operator",
  },
  {
    "end": 267,
    "start": 261,
    "text": ""post"",
    "token": "string",
  },
  {
    "end": 268,
    "start": 267,
    "text": "]",
    "token": "punctuation.bracket",
  },
  {
    "end": 269,
    "start": 268,
    "text": ".",
    "token": "accessor",
  },
  {
    "end": 273,
    "start": 269,
    "text": "tags",
    "token": "identifier",
  },
  {
    "end": 274,
    "start": 273,
    "text": "[",
    "token": "punctuation.bracket",
  },
  {
    "end": 275,
    "start": 274,
    "text": "]",
    "token": "punctuation.bracket",
  },
  {
    "end": 276,
    "start": 275,
    "text": ")",
    "token": "punctuation.bracket",
  },
  {
    "end": 278,
    "start": 277,
    "text": "}",
    "token": "punctuation.bracket",
  },
]
`;

exports[`Lezer tokenizer > real-world > tokenizes all real-world fixtures > real-world/e-commerce.groq 1`] = `
[
  {
    "end": 1,
    "start": 0,
    "text": "*",
    "token": "wildcard",
  },
  {
    "end": 2,
    "start": 1,
    "text": "[",
    "token": "punctuation.bracket",
  },
  {
    "end": 7,
    "start": 2,
    "text": "_type",
    "token": "identifier",
  },
  {
    "end": 10,
    "start": 8,
    "text": "==",
    "token": "operator",
  },
  {
    "end": 20,
    "start": 11,
    "text": ""product"",
    "token": "string",
  },
  {
    "end": 23,
    "start": 21,
    "text": "&&",
    "token": "operator",
  },
  {
    "end": 31,
    "start": 24,
    "text": "defined",
    "token": "identifier.function",
  },
  {
    "end": 32,
    "start": 31,
    "text": "(",
    "token": "punctuation.bracket",
  },
  {
    "end": 37,
    "start": 32,
    "text": "price",
    "token": "identifier",
  },
  {
    "end": 38,
    "start": 37,
    "text": ")",
    "token": "punctuation.bracket",
  },
  {
    "end": 41,
    "start": 39,
    "text": "&&",
    "token": "operator",
  },
  {
    "end": 47,
    "start": 42,
    "text": "count",
    "token": "identifier.function",
  },
  {
    "end": 48,
    "start": 47,
    "text": "(",
    "token": "punctuation.bracket",
  },
  {
    "end": 56,
    "start": 48,
    "text": "variants",
    "token": "identifier",
  },
  {
    "end": 57,
    "start": 56,
    "text": ")",
    "token": "punctuation.bracket",
  },
  {
    "end": 59,
    "start": 58,
    "text": ">",
    "token": "operator",
  },
  {
    "end": 61,
    "start": 60,
    "text": "0",
    "token": "number",
  },
  {
    "end": 62,
    "start": 61,
    "text": "]",
    "token": "punctuation.bracket",
  },
  {
    "end": 64,
    "start": 63,
    "text": "{",
    "token": "punctuation.bracket",
  },
  {
    "end": 72,
    "start": 67,
    "text": "title",
    "token": "identifier",
  },
  {
    "end": 73,
    "start": 72,
    "text": ",",
    "token": "punctuation.delimiter",
  },
  {
    "end": 82,
    "start": 76,
    "text": ""slug"",
    "token": "string",
  },
  {
    "end": 83,
    "start": 82,
    "text": ":",
    "token": "punctuation.delimiter",
  },
  {
    "end": 88,
    "start": 84,
    "text": "slug",
    "token": "identifier",
  },
  {
    "end": 89,
    "start": 88,
    "text": ".",
    "token": "accessor",
  },
  {
    "end": 96,
    "start": 89,
    "text": "current",
    "token": "identifier",
  },
  {
    "end": 97,
    "start": 96,
    "text": ",",
    "token": "punctuation.delimiter",
  },
  {
    "end": 105,
    "start": 100,
    "text": "price",
    "token": "identifier",
  },
  {
    "end": 106,
    "start": 105,
    "text": ",",
    "token": "punctuation.delimiter",
  },
  {
    "end": 120,
    "start": 109,
    "text": ""salePrice"",
    "token": "string",
  },
  {
    "end": 121,
    "start": 120,
    "text": ":",
    "token": "punctuation.delimiter",
  },
  {
    "end": 128,
    "start": 122,
    "text": "select",
    "token": "identifier.function",
  },
  {
    "end": 129,
    "start": 128,
    "text": "(",
    "token": "punctuation.bracket",
  },
  {
    "end": 140,
    "start": 134,
    "text": "onSale",
    "token": "identifier",
  },
  {
    "end": 143,
    "start": 141,
    "text": "==",
    "token": "operator",
  },
  {
    "end": 148,
    "start": 144,
    "text": "true",
    "token": "keyword",
  },
  {
    "end": 151,
    "start": 149,
    "text": "=>",
    "token": "operator.arrow",
  },
  {
    "end": 157,
    "start": 152,
    "text": "round",
    "token": "identifier.function",
  },
  {
    "end": 158,
    "start": 157,
    "text": "(",
    "token": "punctuation.bracket",
  },
  {
    "end": 163,
    "start": 158,
    "text": "price",
    "token": "identifier",
  },
  {
    "end": 165,
    "start": 164,
    "text": "*",
    "token": "wildcard",
  },
  {
    "end": 169,
    "start": 166,
    "text": "0.8",
    "token": "number",
  },
  {
    "end": 170,
    "start": 169,
    "text": ",",
    "token": "punctuation.delimiter",
  },
  {
    "end": 172,
    "start": 171,
    "text": "2",
    "token": "number",
  },
  {
    "end": 173,
    "start": 172,
    "text": ")",
    "token": "punctuation.bracket",
  },
  {
    "end": 174,
    "start": 173,
    "text": ",",
    "token": "punctuation.delimiter",
  },
  {
    "end": 184,
    "start": 179,
    "text": "price",
    "token": "identifier",
  },
  {
    "end": 188,
    "start": 187,
    "text": ")",
    "token": "punctuation.bracket",
  },
  {
    "end": 189,
    "start": 188,
    "text": ",",
    "token": "punctuation.delimiter",
  },
  {
    "end": 201,
    "start": 192,
    "text": ""inStock"",
    "token": "string",
  },
  {
    "end": 202,
    "start": 201,
    "text": ":",
    "token": "punctuation.delimiter",
  },
  {
    "end": 208,
    "start": 203,
    "text": "count",
    "token": "identifier.function",
  },
  {
    "end": 209,
    "start": 208,
    "text": "(",
    "token": "punctuation.bracket",
  },
  {
    "end": 217,
    "start": 209,
    "text": "variants",
    "token": "identifier",
  },
  {
    "end": 218,
    "start": 217,
    "text": "[",
    "token": "punctuation.bracket",
  },
  {
    "end": 223,
    "start": 218,
    "text": "stock",
    "token": "identifier",
  },
  {
    "end": 225,
    "start": 224,
    "text": ">",
    "token": "operator",
  },
  {
    "end": 227,
    "start": 226,
    "text": "0",
    "token": "number",
  },
  {
    "end": 228,
    "start": 227,
    "text": "]",
    "token": "punctuation.bracket",
  },
  {
    "end": 229,
    "start": 228,
    "text": ")",
    "token": "punctuation.bracket",
  },
  {
    "end": 231,
    "start": 230,
    "text": ">",
    "token": "operator",
  },
  {
    "end": 233,
    "start": 232,
    "text": "0",
    "token": "number",
  },
  {
    "end": 234,
    "start": 233,
    "text": ",",
    "token": "punctuation.delimiter",
  },
  {
    "end": 249,
    "start": 237,
    "text": ""categories"",
    "token": "string",
  },
  {
    "end": 250,
    "start": 249,
    "text": ":",
    "token": "punctuation.delimiter",
  },
  {
    "end": 261,
    "start": 251,
    "text": "categories",
    "token": "identifier",
  },
  {
    "end": 262,
    "start": 261,
    "text": "[",
    "token": "punctuation.bracket",
  },
  {
    "end": 263,
    "start": 262,
    "text": "]",
    "token": "punctuation.bracket",
  },
  {
    "end": 265,
    "start": 263,
    "text": "->",
    "token": "accessor",
  },
  {
    "end": 267,
    "start": 266,
    "text": "{",
    "token": "punctuation.bracket",
  },
  {
    "end": 277,
    "start": 272,
    "text": "title",
    "token": "identifier",
  },
  {
    "end": 278,
    "start": 277,
    "text": ",",
    "token": "punctuation.delimiter",
  },
  {
    "end": 297,
    "start": 283,
    "text": ""productCount"",
    "token": "string",
  },
  {
    "end": 298,
    "start": 297,
    "text": ":",
    "token": "punctuation.delimiter",
  },
  {
    "end": 304,
    "start": 299,
    "text": "count",
    "token": "identifier.function",
  },
  {
    "end": 305,
    "start": 304,
    "text": "(",
    "token": "punctuation.bracket",
  },
  {
    "end": 306,
    "start": 305,
    "text": "*",
    "token": "wildcard",
  },
  {
    "end": 307,
    "start": 306,
    "text": "[",
    "token": "punctuation.bracket",
  },
  {
    "end": 312,
    "start": 307,
    "text": "_type",
    "token": "identifier",
  },
  {
    "end": 315,
    "start": 313,
    "text": "==",
    "token": "operator",
  },
  {
    "end": 325,
    "start": 316,
    "text": ""product"",
    "token": "string",
  },
  {
    "end": 328,
    "start": 326,
    "text": "&&",
    "token": "operator",
  },
  {
    "end": 339,
    "start": 329,
    "text": "references",
    "token": "identifier.function",
  },
  {
    "end": 340,
    "start": 339,
    "text": "(",
    "token": "punctuation.bracket",
  },
  {
    "end": 341,
    "start": 340,
    "text": "^",
    "token": "variable.special",
  },
  {
    "end": 342,
    "start": 341,
    "text": ".",
    "token": "accessor",
  },
  {
    "end": 345,
    "start": 342,
    "text": "_id",
    "token": "identifier",
  },
  {
    "end": 346,
    "start": 345,
    "text": ")",
    "token": "punctuation.bracket",
  },
  {
    "end": 347,
    "start": 346,
    "text": "]",
    "token": "punctuation.bracket",
  },
  {
    "end": 348,
    "start": 347,
    "text": ")",
    "token": "punctuation.bracket",
  },
  {
    "end": 352,
    "start": 351,
    "text": "}",
    "token": "punctuation.bracket",
  },
  {
    "end": 353,
    "start": 352,
    "text": ",",
    "token": "punctuation.delimiter",
  },
  {
    "end": 373,
    "start": 356,
    "text": ""relatedProducts"",
    "token": "string",
  },
  {
    "end": 374,
    "start": 373,
    "text": ":",
    "token": "punctuation.delimiter",
  },
  {
    "end": 376,
    "start": 375,
    "text": "*",
    "token": "wildcard",
  },
  {
    "end": 377,
    "start": 376,
    "text": "[",
    "token": "punctuation.bracket",
  },
  {
    "end": 387,
    "start": 382,
    "text": "_type",
    "token": "identifier",
  },
  {
    "end": 390,
    "start": 388,
    "text": "==",
    "token": "operator",
  },
  {
    "end": 400,
    "start": 391,
    "text": ""product"",
    "token": "string",
  },
  {
    "end": 403,
    "start": 401,
    "text": "&&",
    "token": "operator",
  },
  {
    "end": 411,
    "start": 408,
    "text": "_id",
    "token": "identifier",
  },
  {
    "end": 414,
    "start": 412,
    "text": "!=",
    "token": "operator",
  },
  {
    "end": 416,
    "start": 415,
    "text": "^",
    "token": "variable.special",
  },
  {
    "end": 417,
    "start": 416,
    "text": ".",
    "token": "accessor",
  },
  {
    "end": 420,
    "start": 417,
    "text": "_id",
    "token": "identifier",
  },
  {
    "end": 423,
    "start": 421,
    "text": "&&",
    "token": "operator",
  },
  {
    "end": 433,
    "start": 428,
    "text": "count",
    "token": "identifier.function",
  },
  {
    "end": 434,
    "start": 433,
    "text": "(",
    "token": "punctuation.bracket",
  },
  {
    "end": 435,
    "start": 434,
    "text": "(",
    "token": "punctuation.bracket",
  },
  {
    "end": 445,
    "start": 435,
    "text": "categories",
    "token": "identifier",
  },
  {
    "end": 446,
    "start": 445,
    "text": "[",
    "token": "punctuation.bracket",
  },
  {
    "end": 447,
    "start": 446,
    "text": "]",
    "token": "punctuation.bracket",
  },
  {
    "end": 448,
    "start": 447,
    "text": ".",
    "token": "accessor",
  },
  {
    "end": 452,
    "start": 448,
    "text": "_ref",
    "token": "identifier",
  },
  {
    "end": 453,
    "start": 452,
    "text": ")",
    "token": "punctuation.bracket",
  },
  {
    "end": 454,
    "start": 453,
    "text": "[",
    "token": "punctuation.bracket",
  },
  {
    "end": 455,
    "start": 454,
    "text": "@",
    "token": "variable.special",
  },
  {
    "end": 458,
    "start": 456,
    "text": "in",
    "token": "operator.keyword",
  },
  {
    "end": 460,
    "start": 459,
    "text": "^",
    "token": "variable.special",
  },
  {
    "end": 461,
    "start": 460,
    "text": ".",
    "token": "accessor",
  },
  {
    "end": 462,
    "start": 461,
    "text": "^",
    "token": "variable.special",
  },
  {
    "end": 463,
    "start": 462,
    "text": ".",
    "token": "accessor",
  },
  {
    "end": 473,
    "start": 463,
    "text": "categories",
    "token": "identifier",
  },
  {
    "end": 474,
    "start": 473,
    "text": "[",
    "token": "punctuation.bracket",
  },
  {
    "end": 475,
    "start": 474,
    "text": "]",
    "token": "punctuation.bracket",
  },
  {
    "end": 476,
    "start": 475,
    "text": ".",
    "token": "accessor",
  },
  {
    "end": 480,
    "start": 476,
    "text": "_ref",
    "token": "identifier",
  },
  {
    "end": 481,
    "start": 480,
    "text": "]",
    "token": "punctuation.bracket",
  },
  {
    "end": 482,
    "start": 481,
    "text": ")",
    "token": "punctuation.bracket",
  },
  {
    "end": 484,
    "start": 483,
    "text": ">",
    "token": "operator",
  },
  {
    "end": 486,
    "start": 485,
    "text": "0",
    "token": "number",
  },
  {
    "end": 490,
    "start": 489,
    "text": "]",
    "token": "punctuation.bracket",
  },
  {
    "end": 492,
    "start": 491,
    "text": "[",
    "token": "punctuation.bracket",
  },
  {
    "end": 493,
    "start": 492,
    "text": "0",
    "token": "number",
  },
  {
    "end": 496,
    "start": 493,
    "text": "...",
    "token": "operator.spread",
  },
  {
    "end": 497,
    "start": 496,
    "text": "4",
    "token": "number",
  },
  {
    "end": 498,
    "start": 497,
    "text": "]",
    "token": "punctuation.bracket",
  },
  {
    "end": 500,
    "start": 499,
    "text": "{",
    "token": "punctuation.bracket",
  },
  {
    "end": 510,
    "start": 505,
    "text": "title",
    "token": "identifier",
  },
  {
    "end": 511,
    "start": 510,
    "text": ",",
    "token": "punctuation.delimiter",
  },
  {
    "end": 521,
    "start": 516,
    "text": "price",
    "token": "identifier",
  },
  {
    "end": 522,
    "start": 521,
    "text": ",",
    "token": "punctuation.delimiter",
  },
  {
    "end": 538,
    "start": 527,
    "text": ""thumbnail"",
    "token": "string",
  },
  {
    "end": 539,
    "start": 538,
    "text": ":",
    "token": "punctuation.delimiter",
  },
  {
    "end": 546,
    "start": 540,
    "text": "images",
    "token": "identifier",
  },
  {
    "end": 547,
    "start": 546,
    "text": "[",
    "token": "punctuation.bracket",
  },
  {
    "end": 548,
    "start": 547,
    "text": "0",
    "token": "number",
  },
  {
    "end": 549,
    "start": 548,
    "text": "]",
    "token": "punctuation.bracket",
  },
  {
    "end": 550,
    "start": 549,
    "text": ".",
    "token": "accessor",
  },
  {
    "end": 555,
    "start": 550,
    "text": "asset",
    "token": "identifier",
  },
  {
    "end": 557,
    "start": 555,
    "text": "->",
    "token": "accessor",
  },
  {
    "end": 560,
    "start": 557,
    "text": "url",
    "token": "identifier",
  },
  {
    "end": 564,
    "start": 563,
    "text": "}",
    "token": "punctuation.bracket",
  },
  {
    "end": 566,
    "start": 565,
    "text": "}",
    "token": "punctuation.bracket",
  },
]
`;
